--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,15 @@
 name: ros_nodes
 description: A starting point for Dart libraries or applications.
-# version: 1.0.0
+version: 0.0.1
 # homepage: https://www.example.com
 
 environment:
   sdk: '>=2.7.0 <3.0.0'
 
-#dependencies:
-#  path: ^1.6.0
+dependencies:
+  xmlrpc_server:
+    git: git://github.com/sashiri/xmlrpc_server.git
 
 dev_dependencies:
   pedantic: ^1.8.0
   test: ^1.6.0
-  xml_rpc: ^0.2.2
-  xmlrpc_server:
-    git: git://github.com/sashiri/xmlrpc_server.git
