--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: ros_nodes
-description: A starting point for Dart libraries or applications.
+description: A custom ros communication library for dart
 version: 0.1.0
-# homepage: https://www.example.com
+publish_to: none
 
 environment:
   sdk: '>=2.7.0 <3.0.0'
