--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,13 @@
 name: ros_nodes
 description: A custom ros communication library for dart
-version: 0.1.0
+version: 0.2.0
 publish_to: none
 
 environment:
-  sdk: '>=2.7.0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  xmlrpc_server:
-    git: git://github.com/sashiri/xmlrpc_server.git
+  xml_rpc: 0.4.0
 
 dev_dependencies:
   pedantic: ^1.8.0
